--- a/partials/registration.html
+++ b/partials/registration.html
@@ -1,20 +1,28 @@
-<div class="col-xs-12 page">
-	<div class="col-xs-6 no-padding">
+<div class="col-xs-12 page" style="background:#ffcc00">
+	<loading></loading>
+	<div class="page-header">
+		<a href="" ng-click="showPage('/home')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
+		<h3 style="margin:0px; text-align:center">Sign Up</h3>
+	</div>
+	<!---<div class="col-xs-6 no-padding">
 		<button class="btn btn-default" ng-click="showPage('/home')">Home</button>
 	</div>
 	<div class="col-xs-6">
 		<button class="btn btn-default pull-right" ng-click="showPage('/login')">Login</button>
 	</div>
-	<div class="clearfix" style="height:30px; display:block; clear:both; width:100%"></div>
+	<div class="clearfix" style="height:30px; display:block; clear:both; width:100%"></div>-->
 	<div class="col-xs-12">
 		<form class="form" ng-submit="submit()">
 			<div class="form-group">
+				<span><i>N</i></span>
 				<input type="text" class="form-control" name="name" ng-model="name" placeholder="Enter Name" required/>
 			</div>
 			<div class="form-group">
+				<span><i class="fa fa-at"></i></span>
 				<input type="email" class="form-control" name="email" ng-model="email" placeholder="Enter email" required/>
 			</div>
 			<div class="form-group">
+				<span><i class="fa fa-key"></i></span>
 				<input type="password" class="form-control" name="password" ng-model="password" placeholder="Enter Password" required/>
 			</div>
 			<div class="form-group">
