contact page style added

--- a/partials/home.html
+++ b/partials/home.html
@@ -42,7 +42,7 @@
 	</div>
 	<div class="clearfix" style="height:30px; display:block; clear:both; width:100%"></div>
 	<div class="col-xs-6">
-		<button class="btn btn-default transparent"  ng-click="">
+		<button class="btn btn-default transparent"  ng-click="showPage('/contact')">
 			<i class="fa fa-phone-square"></i>
 			<br/><span>Contact</span>
 		</button>
