--- a/partials/contact.html
+++ b/partials/contact.html
@@ -2,7 +2,7 @@
 	<loading></loading>
 	<div class="page-header">
 		<a href="" ng-click="showPage('/home')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
-		<h3 style="margin:0px; text-align:center">Login</h3>
+		<h3 style="margin:0px; text-align:center">Contact Us</h3>
 	</div>
 	<!--<div class="col-xs-6 no-padding">
 		<button class="btn btn-default" ng-click="showPage('/home')">Home</button>
@@ -14,23 +14,24 @@
 	<div class="col-xs-12">
 		<form class="form" ng-submit="submit()">
 			<div class="form-group">
+				<span><i>N</i></span>
+				<input type="text" class="form-control" name="name" ng-model="name" placeholder="Enter Name" required/>
+			</div>
+			<div class="form-group">
 				<span><i class="fa fa-at"></i></span>
-				<input type="text" class="form-control" name="username" ng-model="username" placeholder="Enter Username" required/>
+				<input type="email" class="form-control" name="email" ng-model="email" placeholder="Enter Email" required/>
 			</div>
 			<div class="form-group">
-				<span><i class="fa fa-key"></i></span>
-				<input type="text" class="form-control" name="password" ng-model="password" placeholder="Enter Password" required/>
+				<span><i>S</i></span>
+				<input type="text" class="form-control" name="subject" ng-model="subject" placeholder="Enter Subject" required/>
 			</div>
 			<div class="form-group">
-				<input type="submit" class="btn btn-default submit-btn" name="submit" value="Login"/>
+				<textarea class="form-control" name="message" ng-model="message" rows="6"/></textarea>
+			</div>
+			<div class="form-group">
+				<input type="submit" class="btn btn-default submit-btn" name="submit" value="Send"/>
 			</div>
 		</form>
-		<div class="col-xs-6 no-padding border-right">
-			<a href="" class="pull-left form-below-btn" ng-click="showPage('/forgotPassword')">Forgot<span style="font-family:arial">?</span></a>
-		</div>
-		<div class="col-xs-6 no-padding">
-			<a href="" class="pull-right form-below-btn" ng-click="showPage('/registration')">New User<span style="font-family:arial">?</span></a>
-		</div>
 		<div class="clearfix"></div>
 		<!--{{userDetails}}-->
 		<div ng-if="userDetails.error == 'true'" class="alert alert-danger">
