--- a/partials/forgot.html
+++ b/partials/forgot.html
@@ -1,22 +1,36 @@
-<div class="col-xs-12 page">
-	<div class="col-xs-6 no-padding">
+<div class="col-xs-12 page" style="background:#ffcc00">
+	<loading></loading>
+	<div class="page-header">
+		<a href="" ng-click="showPage('/home')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
+		<h3 style="margin:0px; text-align:center">Forgot Password</h3>
+	</div>
+
+	<!---<div class="col-xs-6 no-padding">
 		<button class="btn btn-default" ng-click="showPage('/home')">Home</button>
 	</div>
 	<div class="col-xs-6">
 		<button class="btn btn-default pull-right" ng-click="showPage('/registration')">Registration</button>
 	</div>
-	<div class="clearfix" style="height:30px; display:block; clear:both; width:100%"></div>
+	<div class="clearfix" style="height:30px; display:block; clear:both; width:100%"></div>-->
 	<div class="col-xs-12">
 		<form class="form" ng-submit="submit()">
 			<div class="form-group">
+				<span><i class="fa fa-at"></i></span>
 				<input type="email" class="form-control" name="email" ng-model="email" placeholder="Enter Email" required/>
 			</div>
 			<div class="form-group">
-				<input type="submit" class="btn btn-default" name="submit" value="Recover"/>
-				<a class="btn btn-default pull-right" ng-click="showPage('/login')">Login</a>
+				<input type="submit" class="btn btn-default submit-btn" name="submit" value="Recover"/>
+				
 			</div>
 		</form>
+		<div class="col-xs-6 no-padding border-right">
+			<a href="" class="pull-left form-below-btn" ng-click="showPage('/login')">Login</a>
+		</div>
+		<div class="col-xs-6 no-padding">
+			<a href="" class="pull-right form-below-btn" ng-click="showPage('/registration')">New User<span style="font-family:arial">?</span></a>
+		</div>
 		<!--{{userDetails}}-->
+		<div class="clearfix"></div>
 		<div ng-if="userDetails.error == 'true'" class="alert alert-danger">
 			{{userDetails.message}}
 		</div>
