Added profile page

--- a/partials/home.html
+++ b/partials/home.html
@@ -29,7 +29,7 @@
 	</div>
 	<div class="clearfix" style="height:30px; display:block; clear:both; width:100%"></div>
 	<div class="col-xs-6">
-		<button class="btn btn-default transparent"  ng-click="">
+		<button class="btn btn-default transparent"  ng-click="openProfile('/profile')">
 			<i class="fa fa-user"></i>
 			<br/><span>Profile</span>
 		</button>
