--- a/partials/help.html
+++ b/partials/help.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 page">
 	<div class="page-header" style="background:#cc9900">
 		<a href="" ng-click="showPage('/home')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
-		<h2 style="margin:0px; text-align:center">&nbsp;</h2>
+		<h3 style="margin:0px; text-align:center">Help</h3>
 	</div>
 	<div class="col-xs-12">
 		<div ng-bind-html="pageContent"></div>
