--- a/partials/home.html
+++ b/partials/home.html
@@ -48,7 +48,7 @@
 		</button>
 	</div>
 	<div class="col-xs-6">
-		<button class="btn btn-default pull-right transparent"  ng-click="">
+		<button class="btn btn-default pull-right transparent"  ng-click="showPage('/privacy')">
 			<i class="fa fa-exclamation-circle"></i>
 			<br/><span>Privacy</span>
 		</button>
