--- a/partials/home.html
+++ b/partials/home.html
@@ -35,7 +35,7 @@
 		</button>
 	</div>
 	<div class="col-xs-6">
-		<button class="btn btn-default pull-right transparent"  ng-click="">
+		<button class="btn btn-default pull-right transparent"  ng-click="showPage('/list')">
 			<i class="fa fa-th-list"></i>
 			<br/><span>List</span>
 		</button>
