--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,9 +1,24 @@
-<div class="col-xs-12 page">
-	<div class="page-header" style="background:#cc9900">
+<div class="col-xs-12 page" style="background:#ffcc00">
+	<div class="page-header">
 		<a href="" ng-click="showPage('/home')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
 		<h3 style="margin:0px; text-align:center">My Offers</h3>
 	</div>
 	<div class="col-xs-12">
-		<div></div>
+		<button class="btn btn-default transparent"  ng-click="showPage('/addNewItem')">
+			<i class="fa fa-plus"></i>
+			<br/><span>Add New Item</span>
+		</button>
+	</div>
+	<div class="col-xs-12" style="margin-top:20px">
+		<button class="btn btn-default pull-right transparent"  ng-click="showPage('/offers')">
+			<i class="fa fa-th"></i>
+			<br/><span>My Offers</span>
+		</button>
+	</div>
+	<div class="col-xs-12" style="margin-top:20px">
+		<button class="btn btn-default pull-right transparent"  ng-click="showPage('/settings')">
+			<i class="fa fa-cog fa-fw"></i>
+			<br/><span>Settings</span>
+		</button>
 	</div>
 </div>
