--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,24 +1,31 @@
 <div class="col-xs-12 page" style="background:#ffcc00">
+	<loading></loading>
 	<div class="page-header">
 		<a href="" ng-click="showPage('/home')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
 		<h3 style="margin:0px; text-align:center">My Offers</h3>
 	</div>
 	<div class="col-xs-12">
-		<button class="btn btn-default transparent"  ng-click="showPage('/addNewItem')">
+		<button class="btn btn-default transparent" ng-click="showPage('/addNewItem')">
 			<i class="fa fa-plus"></i>
 			<br/><span>Add New Item</span>
 		</button>
 	</div>
 	<div class="col-xs-12" style="margin-top:20px">
-		<button class="btn btn-default pull-right transparent"  ng-click="showPage('/offers')">
+		<button class="btn btn-default pull-right transparent" ng-click="showPage('/offers')">
 			<i class="fa fa-th"></i>
 			<br/><span>My Offers</span>
 		</button>
 	</div>
 	<div class="col-xs-12" style="margin-top:20px">
-		<button class="btn btn-default pull-right transparent"  ng-click="showPage('/settings')">
+		<button class="btn btn-default pull-right transparent" ng-click="showPage('/settings')">
 			<i class="fa fa-cog fa-fw"></i>
 			<br/><span>Settings</span>
+		</button>
+	</div>
+	<div class="col-xs-12" style="margin-top:20px">
+		<button class="btn btn-default pull-right transparent" ng-click="logout()">
+			<i class="fa fa-sign-out"></i>
+			<br/><span>Logout</span>
 		</button>
 	</div>
 </div>
