--- a/partials/settings.html
+++ b/partials/settings.html
@@ -17,12 +17,12 @@
 			</div>
 			<div class="checkbox">
 				<label>
-				  <input type="checkbox" name="newsletter" ng-model="newsletter" ng-checked="newsletter=='subscribed'" value="subscribed"> Newsletter
+				  <input type="checkbox" name="newsletter" ng-model="newsletter" ng-true-value="'subscribed'" ng-false-value="'unsubscribed'" value="subscribed"> Newsletter
 				</label>
 			 </div>
 			 <div class="form-group">
 				<a href="" ng-click="showPage('/changePassword')" class="btn btn-default btn-pull-left">Change Password</a>
-				<input type="hidden" name="userID" ng-model="userID">
+				<!--<input type="hidden" name="userID" ng-model="userID">-->
 			</div>
 			<div class="form-group">
 				<input type="submit" class="btn btn-default submit-btn" name="submit" value="Save Changes"/>
