--- a/partials/changePassword.html
+++ b/partials/changePassword.html
@@ -3,6 +3,7 @@
 	<div class="page-header">
 		<a href="" ng-click="showPage('/settings')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
 		<h3 style="margin:0px; text-align:center">Change Password</h3>
+		<a href="" ng-click="showPage('/home')" class="btn-pull-right"><i class="fa fa-home"></i></a>
 	</div>
 	<div class="col-xs-12">
 		<form class="form" ng-submit="submit()">
