--- a/partials/contact.html
+++ b/partials/contact.html
@@ -19,7 +19,7 @@
 				<input type="text" class="form-control" name="subject" ng-model="subject" placeholder="Enter Subject" required/>
 			</div>
 			<div class="form-group">
-				<textarea class="form-control" name="message" ng-model="message" rows="6" placeholder="Enter Message"/></textarea>
+				<textarea class="form-control" name="message" ng-model="message" rows="6" placeholder="Type your message here..."/></textarea>
 			</div>
 			<div class="form-group">
 				<input type="submit" class="btn btn-default submit-btn" name="submit" value="Send"/>
