--- a/partials/profile.html
+++ b/partials/profile.html
@@ -2,7 +2,7 @@
 	<loading></loading>
 	<div class="page-header">
 		<a href="" ng-click="showPage('/home')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
-		<h3 style="margin:0px; text-align:center">My Offers</h3>
+		<h3 style="margin:0px; text-align:center">Profile</h3>
 	</div>
 	<div class="col-xs-12">
 		<button class="btn btn-default transparent" ng-click="showPage('/addNewItem')">
