--- a/partials/settings.html
+++ b/partials/settings.html
@@ -3,16 +3,34 @@
 	<div class="page-header">
 		<a href="" ng-click="showPage('/profile')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
 		<h3 style="margin:0px; text-align:center">Settings</h3>
+		<a href="" ng-click="showPage('/home')" class="btn-pull-right"><i class="fa fa-home"></i></a>
 	</div>
 	<div class="col-xs-12">
 		<form class="form" ng-submit="submit()">
+			<div class="panel-body">
+							<!-- The file input field used as target for the file upload widget -->
+							<input type="hidden" id="upload-handler" name="upload-handler" value="http://parssv.com/sensemedia/includes/uploader/"/>
+							<input id="fileupload" type="file" name="files"/>
+							<em>You can upload 4 images of your item.</em>
+							<br>
+							<br>
+							<!-- The global progress bar -->
+							<div id="progress" class="progress">
+								<div class="progress-bar progress-bar-success"></div>
+							</div>
+							<!-- The container for the uploaded files -->
+							<div id="files" class="files"></div>
+							<div id="item-images">
+								
+							</div>
+						</div>
 			<div class="form-group">
 				<span><i>N</i></span>
-				<input type="text" class="form-control" name="name" ng-model="name" placeholder="Enter Name" required/>
+				<input type="text" class="form-control" name="name" ng-value="name" ng-model="name" placeholder="Enter Name" required/>
 			</div>
 			<div class="form-group">
 				<span><i class="fa fa-map-marker"></i></span>
-				<input type="text" class="form-control" name="location" ng-model="location" placeholder="Enter Location" required/>
+				<input type="text" class="form-control" name="location" ng-value="location" ng-model="location" placeholder="Enter Location" required/>
 				<p>A location that other users see on your profile.</p>
 			</div>
 			<div class="checkbox">
@@ -22,7 +40,7 @@
 			 </div>
 			 <div class="form-group">
 				<a href="" ng-click="showPage('/changePassword')" class="btn btn-default btn-pull-left">Change Password</a>
-				<!--<input type="hidden" name="userID" ng-model="userID">-->
+				<input type="hidden" name="user_id" ng-model="user_id">
 			</div>
 			<div class="form-group">
 				<input type="submit" class="btn btn-default submit-btn" name="submit" value="Save Changes"/>
