--- a/partials/addNewItem.html
+++ b/partials/addNewItem.html
@@ -5,7 +5,7 @@
 		<a href="" ng-click="showPage('/home')" class="btn-pull-right"><i class="fa fa-home"></i></a>
 	</div>
 	<div class="col-xs-12">
-		<form class="form" ng-submit="submit()">
+		<form class="form" ng-submit="submit()" enctype="multipart/form-data">
 			<div class="form-group">
 				<span><i>C</i></span>
 				<select class="form-control">
