--- a/partials/show_single_item.html
+++ b/partials/show_single_item.html
@@ -1,18 +1,53 @@
 <div class="col-xs-12 page" style="background:#ffcc00">
 	<div class="page-header">
-		<a href="" ng-click="showPage('/offers')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
+		<a href="" ng-click="showPage('/list')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
 		<h3 style="margin:0px; text-align:center">Item</h3>
 		<a href="" ng-click="showPage('/home')" class="btn-pull-right"><i class="fa fa-home"></i></a>
 	</div>
+	{{len}}
 	<div class="col-xs-12">
-		<div class="col-xs-12 item thumbnail" ng-repeat="item in itemDetails">
+		<div class="col-xs-12 item thumbnail">
 			<div class="">
-				<img src="{{item.thumbnail}}" class="item-img" />
+				<!-- Carousel
+				================================================== -->
+			<div id="myCarousel" class="carousel slide" data-ride="carousel"> 
+			  <!-- Indicators -->
+			  <ol class="carousel-indicators">
+				<li data-target="#myCarousel" ng-repeat="l in len" class="{active : (l === 0)}" data-slide-to="{{l}}" ></li>
+			  </ol>
+			  <div class="carousel-inner">
+				<div ng-class="{item: true, active : (l == 0)}" ng-repeat="img in itemDetails.images"> <img src="{{img}}" alt="Slide number {{l}}" width="100%">
+				  <div class="container">
+					<div class="carousel-caption"> </div>
+				  </div>
+				</div>
+			  </div>
+			  <a class="left carousel-control"  role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control"  role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a> </div>
 			</div>
-			<p class="center"><strong>{{item.user_name}}</strong></p>
-			<p class="center">Price: {{item.price}} USD</p>
+			<!-- /.carousel --> 
+			 
+			</div>
+			<p class="center"><strong>{{itemDetails.heading}}</strong></p>
+			<p>{{itemDetails.description}}</p>
+			<p class="center"></p>
 			<hr/>
-			<img src="{{item.user_avatar}}" class="avatar"/>
+			<img src="{{itemDetails.user_avatar}}" class="avatar"/>
+			<p class="center"><strong>{{itemDetails.user_name}}</strong></p>
+		</div>
+		<div class="col-xs-12" style="margin-bottom:15px">
+			<button class="btn btn-default transparent">
+				<br/><span>Price: {{itemDetails.price}} USD</span>
+			</button>
+		</div>
+		<div class="col-xs-12" style="margin-bottom:15px">
+			<button class="btn btn-default transparent" ng-click="showPage('/addNewItem')">
+				<br/><span>Buy</span>
+			</button>
+		</div>
+		<div class="col-xs-12" style="margin-bottom:15px">
+			<button class="btn btn-default transparent" ng-click="showPage('/addNewItem')">
+				<br/><span>Ask</span>
+			</button>
 		</div>
 	</div>
 	
