--- a/partials/watching.html
+++ b/partials/watching.html
@@ -1,4 +1,5 @@
 <div class="col-xs-12 page" style="background:#ffcc00">
+	<loading></loading>
 	<div class="page-header">
 		<a href="" ng-click="showPage('/offers')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
 		<h3 style="margin:0px; text-align:center">Watching</h3>
