--- a/partials/show_single_item.html
+++ b/partials/show_single_item.html
@@ -45,44 +45,65 @@
 	
 	<script type="text/ng-template" id="myModalContent.html">
         <div class="modal-header">
-            <h3 class="modal-title">Buy</h3>
+			<loading></loading>
+			<button type="button" style="width:25px; height:25px" class="close ui-btn ui-shadow ui-corner-all" ng-click="cancel()">×</button>
+            <h3 class="modal-title center">Really Want to buy? Make an offer than.</h3>
         </div>
         <div class="modal-body">
-            <form class="form" ng-submit="submit()">
+			<form class="form" ng-submit="submit()">
 				<div class="form-group">
-					<input type="text" class="form-control" name="price" ng-model="price"  required/>
+					<input type="number" class="form-control" name="price" ng-model="price" placeholder="Enter your Offer" required/>
 				</div>
 				<div class="form-group">
-				<input type="submit" class="btn btn-default submit-btn" name="submit" value="BUY"/>
+					<input type="submit" class="btn btn-default submit-btn" name="submit" ng-click="ok()" value="Buy"/>
 				</div>
 			</form>
+           <!-- Selected: <b>{{userID}}</b>-->
         </div>
         <div class="modal-footer">
-            <!---<button class="btn btn-primary" ng-click="ok()">OK</button>--->
-            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-        </div>
+            <!---<button class="btn btn-primary" ng-click="ok()">OK</button>--
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>--->
+			<div class="clearfix"></div>
+			<!--{{userData}}-->
+			<div ng-if="offer.error == 'true'" class="alert alert-danger">
+				{{offer.message}}
+			</div>
+			<div ng-if="offer.success == 'true'" class="alert alert-success">
+				{{offer.message}}
+			</div>
+		</div>
     </script>
 	
 	<!-----Query Modal---------------------->
 	
 	<script type="text/ng-template" id="myModal.html">
         <div class="modal-header">
-            <h3 class="modal-title">I'm a modal 2!</h3>
+			<loading></loading>
+			<button type="button" style="width:25px; height:25px" class="close ui-btn ui-shadow ui-corner-all" ng-click="cancel()">×</button>
+            <h3 class="modal-title center">Ask Your Query</h3>
         </div>
         <div class="modal-body">
 			<form class="form" ng-submit="submit()">
 				<div class="form-group">
-					<input type="text" class="form-control" name="price" ng-model="price"  required/>
+					<input type="text" class="form-control" name="query" ng-model="query" placeholder="Enter your query..." required/>
 				</div>
 				<div class="form-group">
-				<input type="submit" class="btn btn-default submit-btn" name="submit" value="Ask Query"/>
+					<input type="submit" class="btn btn-default submit-btn" name="submit" value="Ask"/>
 				</div>
 			</form>
-            Selected: <b>{{userID}}</b>
+           <!-- Selected: <b>{{userID}}</b>-->
         </div>
         <div class="modal-footer">
-            <button class="btn btn-primary" ng-click="ok()">OK</button>
-            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+            <!---<button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>--->
+			<div class="clearfix"></div>
+			<!--{{userData}}-->
+			<div ng-if="query.error == 'true'" class="alert alert-danger">
+				{{query.message}}
+			</div>
+			<div ng-if="query.success == 'true'" class="alert alert-success">
+				{{query.message}}
+			</div>
         </div>
     </script>
 </div>
