discussion form updated

--- a/partials/selling.html
+++ b/partials/selling.html
@@ -15,7 +15,8 @@
 			<hr/>
 			<img src="{{s.user_avatar}}" class="avatar"/>
 			<p class="center"><strong>{{s.user_name}}</strong></p>
-			<input type="submit" name="submit" ng-click="del(s.id)" class="btn btn-default submit-btn" value="Delete">
+			<input type="submit" name="submit" ng-click="del(s.id)" class="btn btn-default submit-btn" value="Delete" style="margin-bottom:5px;">
+			<input type="submit" name="submit" ng-click="discussionList(s.id)" class="btn btn-default submit-btn" value="Discussion">
 		</div>
 		<div class="clearfix"></div>
 		<!--{{userData}}-->
