--- a/partials/buying.html
+++ b/partials/buying.html
@@ -6,7 +6,7 @@
 		<a href="" ng-click="showPage('/home')" class="btn-pull-right"><i class="fa fa-home"></i></a>
 	</div>
 	<div class="col-xs-12">
-		<div class="col-xs-12 item thumbnail" ng-repeat="b in buying">
+		<div class="col-xs-12 item thumbnail" ng-repeat="b in buying" ng-click="showItem(b.id)">
 			<div class="">
 				<img src="{{b.thumbnail}}" class="item-img"/>
 			</div>
