--- a/partials/reply.html
+++ b/partials/reply.html
@@ -1,13 +1,12 @@
 <div class="col-xs-12 page" style="background:#ffcc00">
 	<loading></loading>
 	<div class="page-header">
-		<a href="" ng-click="showPage('/buying')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
-		<h3 style="margin:0px; text-align:center">View Discussion</h3>
+		<a href="" ng-click="showPage('/discussionUsersList')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
+		<h3 style="margin:0px; text-align:center">Messages</h3>
 		<a href="" ng-click="showPage('/home')" class="btn-pull-right"><i class="fa fa-home"></i></a>
 	</div>
 	<div class="col-xs-12">
 		<div class="col-xs-12 thumbnail">
-			<p>{{messages.item_name}}</p>
 			<div class="col-xs-12 item" ng-repeat="msg in messages">
 				<span><img src="{{msg.user_avatar}}" class="avatar"/></span>
 				<span><strong>{{msg.user_name}}</strong></span>
@@ -19,10 +18,10 @@
 	
 		<form class="form" ng-submit="submit()">
 			<div class="form-group">
-				<input type="text" class="form-control" name="query" ng-model="query" placeholder="Enter your query..." required/>
+				<input type="text" class="form-control" name="query" ng-model="query" placeholder="Enter your text here..." required/>
 			</div>
 			<div class="form-group">
-				<input type="submit" class="btn btn-default submit-btn" name="submit" value="Ask" />
+				<input type="submit" class="btn btn-default submit-btn" name="submit" value="Reply" />
 			</div>
 		</form>	
 		<div class="clearfix"></div>
@@ -34,5 +33,4 @@
 				{{query.message}}
 			</div>
 	</div>
-	
 </div>
