--- a/partials/watching.html
+++ b/partials/watching.html
@@ -6,7 +6,7 @@
 		<a href="" ng-click="showPage('/home')" class="btn-pull-right"><i class="fa fa-home"></i></a>
 	</div>
 	<div class="col-xs-12">
-		<div class="col-xs-12 item thumbnail" ng-repeat="w in watching">
+		<div class="col-xs-12 item thumbnail" ng-repeat="w in watching" ng-click="showItem(w.id)">
 			<div class="">
 				<img src="{{w.thumbnail}}" class="item-img"/>
 			</div>
