--- a/partials/reply.html
+++ b/partials/reply.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 page" style="background:#ffcc00">
 	<loading></loading>
 	<div class="page-header">
-		<a href="" ng-click="showPage('/discussionUsersList')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
+		<a href="" ng-click="showPage('/selling')" class="btn-pull-left"><i class="fa fa-arrow-circle-left"></i></a>
 		<h3 style="margin:0px; text-align:center">Messages</h3>
 		<a href="" ng-click="showPage('/home')" class="btn-pull-right"><i class="fa fa-home"></i></a>
 	</div>
