--- a/partials/addNewItem.html
+++ b/partials/addNewItem.html
@@ -82,10 +82,10 @@
 	</div>
 	<div class="clearfix"></div>
 		<!--{{userDetails}}-->
-		<div ng-if="userDetails.error == 'true'" class="alert alert-danger">
+		<div ng-if="itemDetails.error == 'true'" class="alert alert-danger">
 			{{itemDetails.message}}
 		</div>
-		<div ng-if="userDetails.success == 'true'" class="alert alert-success">
+		<div ng-if="itemDetails.success == 'true'" class="alert alert-success">
 			{{itemDetails.message}}
 		</div>
 </div>
