--- a/partials/addNewItem.html
+++ b/partials/addNewItem.html
@@ -27,7 +27,7 @@
 				<input type="text" class="form-control" name="price" ng-model="price" placeholder="Enter Price" required/>
 			</div>
 			<div class="form-group">
-				<input type="file" nv-file-select="" uploader="uploader"  />
+				<input type="file" accept="image/*" nv-file-select="" uploader="uploader"  />
 			</div>
 			 <!--<h3>Upload queue</h3>
                     <p>Queue length: {{ uploader.queue.length }}</p>--->
